tests/NormalTests/paczka1/small_fuzzy/67796541.err
Error in line 12: UyN S746 2,0
Error in line 2: VNfNQ S607 64,6
